--- a/src/site/notes/6. Common Knowledge/6. Common Knowledge.md
+++ b/src/site/notes/6. Common Knowledge/6. Common Knowledge.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/6-common-knowledge/6-common-knowledge/"}
+{"dg-publish":true,"permalink":"/6-common-knowledge/6-common-knowledge/","noteIcon":""}
 ---
 
 # 6. Common Knowledge
