Update content src/site/notes/7. Scholarly Details/7. Scholarly Details.md

--- a/src/site/notes/7. Scholarly Details/7. Scholarly Details.md
+++ b/src/site/notes/7. Scholarly Details/7. Scholarly Details.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/7-scholarly-details/7-scholarly-details/"}
+{"dg-publish":true,"permalink":"/7-scholarly-details/7-scholarly-details/","noteIcon":""}
 ---
 
 # 7. Scholarly Details
