Update content src/site/notes/1. Overview/1. Overview.md

--- a/src/site/notes/1. Overview/1. Overview.md
+++ b/src/site/notes/1. Overview/1. Overview.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/1-overview/1-overview/","tags":["gardenEntry"],"noteIcon":""}
+{"dg-publish":true,"dg-permalink":"Overview","permalink":"/Overview/","noteIcon":""}
 ---
 
 # 1. Overview
